<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Filmex</string>
    <string name="developer">Roger Silva</string>
    <string name="git_hub">https://github.com/RogerSilva2</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="content_description_image_view_ic_launcher">Image view icon launcher</string>
    <string name="content_description_image_view_ic_launcher_round">Image view icon launcher round</string>
    <string name="content_description_image_view_ic_star_border">Image view icon star border</string>
    <string name="content_description_image_view_ic_favorite_border">Image view icon favorite border</string>
    <string name="content_description_image_view_ic_date_range">Image view icon date range</string>
    <string name="content_description_image_view_ic_cloud_off">Image view icon cloud off</string>
    <string name="content_description_image_view_tmdb">Image view TMDb</string>
    <string name="content_description_image_view_poster">Image view poster</string>
    <string name="content_description_image_view_backdrop">Image view backdrop</string>
    <string name="content_description_image_view_shape_backdrop">Image view shape backdrop</string>
    <string name="content_description_image_view_profile">Image view profile</string>
    <string name="content_description_image_view_shape_profile">Image view shape profile</string>

    <string name="slash">/</string>

    <string name="format_date">MMM dd, yyyy</string>
    <string name="format_date_short">yyyy-MM-dd</string>

    <string name="menu_group_movies">Movies</string>
    <string name="menu_group_tv_shows">TV Shows</string>
    <string name="menu_group_people">People</string>

    <string name="menu_item_popular">Popular</string>
    <string name="menu_item_top_rated">Top Rated</string>
    <string name="menu_item_upcoming">Upcoming</string>
    <string name="menu_item_now_playing">Now Playing</string>
    <string name="menu_item_on_tv">On TV</string>
    <string name="menu_item_airing_today">Airing Today</string>
    <string name="menu_item_popular_people">Popular People</string>

    <string name="message_loading">Loading</string>
    <string name="message_connectivity_error">No Internet</string>

    <string name="action_acknowledgments">Acknowledgments</string>
    <string name="action_try_again">Try again</string>
    <string name="action_previous">Previous</string>
    <string name="action_next">Next</string>

    <string name="text_status">Status</string>
    <string name="text_rumored">Rumored</string>
    <string name="text_planned">Planned</string>
    <string name="text_planned_female">Planned</string>
    <string name="text_in_production">In Production</string>
    <string name="text_post_production">Post Production</string>
    <string name="text_released">Released</string>
    <string name="text_canceled">Canceled</string>
    <string name="text_canceled_female">Canceled</string>
    <string name="text_returning_series">Returning Series</string>
    <string name="text_ended">Ended</string>
    <string name="text_pilot">Pilot</string>
    <string name="text_original_title">Original Title</string>
    <string name="text_original_name">Original Name</string>
    <string name="text_overview">Overview</string>
    <string name="text_genres">Genres</string>
    <string name="text_place_of_birth">Place of Birth</string>
    <string name="text_also_known_as">Also Known As</string>
    <string name="text_biography">Biography</string>
    <string name="text_tmdb_title">Let\'s talk about TMDb</string>
    <string name="text_tmdb_description">The Movie Database (TMDb) is a community built movie and TV database. Every piece of data has been added by our amazing community dating back to 2008. TMDb\'s strong international focus and breadth of data is largely unmatched and something we\'re incredibly proud of. Put simply, we live and breathe community and that\'s precisely what makes us different.</string>

    <string name="error_server_unavailable">Error server unavailable</string>
    <string name="error_getting_movie">Error getting movie</string>
    <string name="error_getting_movies">Error getting movies</string>
    <string name="error_getting_tv_show">Error getting TV show</string>
    <string name="error_getting_tv_shows">Error getting TV shows</string>
    <string name="error_getting_person">Error getting person</string>
    <string name="error_getting_people">Error getting people</string>
    <string name="error_getting_property">Error getting property</string>
    <string name="error_date_format">Error date format</string>
</resources>