<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_person"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="101dp"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:padding="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_view_profile"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:padding="8dp"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/content_description_image_view_profile" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:padding="4dp"
                android:background="@drawable/shape_chip">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:tint="@color/colorAccent"
                    android:src="@mipmap/ic_favorite_border_white_24dp"
                    android:contentDescription="@string/content_description_image_view_ic_favorite_border" />

                <TextView
                    android:id="@+id/text_view_popularity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/colorAccent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="98dp"
        android:layout_marginStart="98dp"
        android:background="#E0E0E0" />

</LinearLayout>